--- a/.env
+++ b/.env
@@ -2,18 +2,25 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_URL=http://localhost:3000
+APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3307
-DB_DATABASE=db_vise
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=us-cdbr-east-06.cleardb.net
+DB_PORT=3306
+DB_DATABASE=heroku_1e575b60205ec5a
+DB_USERNAME=b1c89cb2e54527
+DB_PASSWORD=5bebb40a
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=4609af3d744e7e
+MAIL_PASSWORD=df40a9b12bdf88
+MAIL_ENCRYPTION=tls
