--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "require": {
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^9.1",
+        "illuminate/mail": "^8.0",
         "laravel/lumen-framework": "^8.3.1"
     },
-    "require-dev": {},
     "autoload": {
         "psr-4": {
             "App\\": "app/",
